# smw-freeram-manager

./: .gitignore  CMakeLists.txt  README.txt  appveyor.yml  ramfile_description.txt  test.c
interface/: freeram.c  freeram.h
ramdesc/: smw_with_sa1_tags.ramdesc
src/: freeram.cpp  malloc.cpp  malloc.hpp
utils/: ramdesc_editor.html
